K8S/prometheus-testing/base/policy.yml
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  namespace: "testing"
  name: "prometheus-testing-access"
spec:
  policyTypes: ["Ingress"]
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "prometheus-testing"
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "testing"
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "kube-system"
